<resources>
    <string name="app_name">Infobyte Technologies</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">OR</string>

</resources>