<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kivous.infobytetechnologies.auth.ui.viewmodels.AuthViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbarThumbVertical="@null"
        tools:context=".auth.ui.fragments.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="Welcome\nBack"
                android:textColor="@color/blue"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="128dp"
                android:drawableStart="@drawable/selector_email"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:maxLength="60"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="40dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv" />

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/cancel"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/et_email"
                app:layout_constraintEnd_toEndOf="@id/et_email"
                app:layout_constraintTop_toTopOf="@id/et_email" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/selector_lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:maxLength="30"
                android:text="@={viewModel.password}"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="40dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <ImageView
                android:id="@+id/iv_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/visibility_off"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/et_password"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                app:layout_constraintTop_toTopOf="@id/et_password"
                app:tint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="14sp"
                android:onClick="@{viewModel::onForgotPassword}"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{viewModel::onLoginClick}"
                android:text="@string/login"
                app:cornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/btn_login">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:onClick="@{viewModel::onRegisterTextClick}"
                    android:text="@string/register"
                    android:textColor="@color/orange_500"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/or"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@id/tv_or"
                app:layout_constraintEnd_toStartOf="@id/tv_or"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_or" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@id/tv_or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_or"
                app:layout_constraintTop_toTopOf="@id/tv_or" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/white"
                android:onClick="@{viewModel::onFacebookClick}"
                app:cardCornerRadius="100dp"
                app:cardElevation="1dp"
                app:layout_constraintEnd_toStartOf="@id/cv_google"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_or"
                app:strokeWidth="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:src="@drawable/icon_facebook" />

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/white"
                android:onClick="@{viewModel::onGoogleClick}"
                app:cardCornerRadius="100dp"
                app:cardElevation="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_or"
                app:strokeWidth="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:src="@drawable/icon_google" />

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:onClick="@{viewModel::onTwitterClick}"
                app:cardCornerRadius="100dp"
                app:cardElevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_google"
                app:layout_constraintTop_toBottomOf="@id/tv_or"
                app:layout_constraintVertical_bias="0"
                app:strokeWidth="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:src="@drawable/icon_twitter" />

            </com.google.android.material.card.MaterialCardView>

            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>