<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kivous.infobytetechnologies.auth.ui.viewmodels.AuthViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbarThumbVertical="@null"
        tools:context=".auth.ui.fragments.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="Create\nAccount"
                android:textColor="@color/blue"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="128dp"
                android:drawableStart="@drawable/selector_account"
                android:drawablePadding="8dp"
                android:hint="Name"
                android:inputType="textPersonName"
                android:maxLength="60"
                android:paddingStart="12dp"
                android:paddingEnd="40dp"
                android:text="@={viewModel.name}"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv" />

            <ImageView
                android:id="@+id/iv_cancel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/cancel"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/et_name"
                app:layout_constraintEnd_toEndOf="@id/et_name"
                app:layout_constraintTop_toTopOf="@id/et_name" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/selector_email"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="60"
                android:paddingStart="12dp"
                android:paddingEnd="40dp"
                android:text="@={viewModel.email}"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <ImageView
                android:id="@+id/iv_cancel_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/cancel"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/et_email"
                app:layout_constraintEnd_toEndOf="@id/et_email"
                app:layout_constraintTop_toTopOf="@id/et_email" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/selector_lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:paddingStart="12dp"
                android:paddingEnd="40dp"
                android:text="@={viewModel.password}"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <ImageView
                android:id="@+id/iv_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/visibility_off"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/et_password"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                app:layout_constraintTop_toTopOf="@id/et_password"
                app:tint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_need_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Need help?"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{viewModel::onRegisterClick}"
                android:text="@string/register"
                app:cornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_need_help" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_register"
                app:layout_constraintVertical_bias="0">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:onClick="@{viewModel::onLoginTextClick}"
                    android:text="@string/login"
                    android:textColor="@color/orange_500"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
